# linuxdependency

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  CPackLinuxDeployQt.cmake.in  Packaging.cmake  Qldd.desktop  Qldd.pro  README.md  config.h.in  customtypes.h  demanglerules.cpp  demanglerules.h  demanglerules.ui  finfdialog.cpp  finfdialog.h  finfdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qldd.cpp  qldd.h
.github/workflows/: action-cpp.yml
Qldd.app/Contents/: .gitignore
Qldd.app/Contents/MacOS/: .gitignore
Qldd.app/Contents/Resources/: .gitignore
cmake/modules/: FindConfigPath.cmake
dolphin/: kde-qldd-menu.desktop
nautilus-python/extensions/: dependency-viewer-43.py  dependency-viewer.py  linuxdependency.py
nemo/actions/: dependency-viewer.nemo_action
resources/: Qldd.icns  icon.icns  postinst  qldd.desktop  qldd.desktop.in  resources.qrc  rules.json  window.rc
